alpha11:
+ Add permission system for URIHandlers.
  / Specify in permissions: [...] in endernet-servers.json.
  / Supported permissions: "item", "message".

alpha10:
+ Add ComputerCraft API!

alpha9a:
* Fixed an NPE in particle spawning
* Fixed SMP bugs, making the mod function correctly on servers

alpha8:
+ Add "receiveFromDefinedOnly" config option. Setting it to true makes you only able to receive from defined servers.
+ Add WAILA integration (shows ID of transmitter/receiver on hover).

alpha7 "The Aesthetics Update":
+ Transmitters now emit pretty particles on successful transmission!
+ Better textures for Transmitters and Receivers.

alpha6:
* Fixed a bug where receivers did not initialize upon world reload.
* Fixed putting a receiver next to a transmitter.

alpha5a:
* Server entries from the old config get autoimported to the new one now.

alpha5:
+ Changed config format to a more superior one.
  * Passwords and permissions are not yet implemented.
* Items now fall out of an Ender Transmitter on break.
* Fixed the Ender Transmitter GUI refreshing to work a /lot/ better.

alpha4:
+ Add support for OpenBlocks crayons/glasses and Thermal Expansion energy storage sending
+ Added heuristic-esque NBT tag detection.
  * This will work on custom books and enchanted items, so you don't need to register these.
* Fix NBT sending over servers.

alpha3:
+ Add /eninfo command for devs to get information on their blocks.
* Fix maps being sendable.

alpha2:
- Remove extra debug code that stopped EnderNet from launching.

alpha1:
/ First release.