@@ -6,5 +6,7 @@ import fi.iki.elonen.NanoHTTPD.Response;
 public interface IURIHandler {
 	public Response serve(IHTTPSession session);
 
-	public String getPermission();
+	public String getPermissionName();
+	
+	public String getURI();
 }
