@@ -36,7 +36,12 @@ public class URIHandlerCanReceive implements IURIHandler {
 	}
 
 	@Override
-	public String getPermission() {
+	public String getPermissionName() {
 		return null;
+	}
+	
+	@Override
+	public String getURI() {
+		return "/canReceive";
 	}
 }
